--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ out/
 # ───── 環境設定ファイル（セキュリティ上Gitから除外）─────
 .env
 application-local.yml
+application-test.yml
 
 # ───── QueryDSLによって生成されるファイル ─────
 /src/main/generated/
